# AssignmentInstructions

./: .gitignore  README.md
assembly-task-8/examples/hello-world/: hello-world-function.asm
assembly-task-9/: README.md
c-task-7/: README.md
dynprog-task-17/: README.md  ordlista.txt
go-task-10/: README.md
hash-task-16/: README.md
haskell-c-task-7/: README.md
haskell-task-2/: README.org
haskell-task-3/: README.org
haskell-task-4/: README.org
haskell-task-4/src/: TAGS  Todo  Todo.hi  Todo.hs  todo-lista
haskell-task-5/: README.md  TAGS
project-week-0/: README.md
prolog-task-10/: Guide.md  README.md  template.pl
raytracer-task-13/: README.md
rust-task-2/: README.md
rust-task-2/kattis_template/src/: main.rs
rust-task-3/: README.md
rust-task-3/chess_template/src/: lib.rs
rust-task-5/: README.md
rust-task-5/chess-gui-template/: Cargo.toml
rust-task-5/chess-gui-template/src/: main.rs
simulation-task-12/: README.md
sockets-task-14/: README.md
sorting-task-11/: README.md
sorting-task-11/sorting-visualisation/src/: main.rs
structures-task-18/: README.md
